dhall/tests/type-inference/failure/unit/RecordProjectionByTypeFieldTypeMismatch.txt
Type error: error: ProjectionWrongType
 --> <current file>:1:0
  |
1 | { y = {=} }.( {y : Natural} )
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ProjectionWrongType
  |
